# robothon2023

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: boundary_safety.yaml  byod_poses.yaml  door_open_trajectories.yaml  fixed_transforms.yaml  joint_angles.yaml  perception_params.yaml  probe_action.yaml  robothon.rviz  task_params.yaml  trajectories.yaml  wind_cable_poses.yaml  winding_poses.yaml  winding_poses_new.yaml  yaml_viewer.py
docs/: README.md  assumptions.md  gui.md
docs/3d_models/: probe_holder_v1.SLDPRT  probe_holder_v1.STL  probe_holder_v2.SLDPRT  probe_holder_v2.STL  probe_holder_v3.SLDPRT  probe_holder_v3.STL
include/: task_board_detector.h
launch/: button_press_test.launch  byod.launch  gui_kinova.launch  kinova_arm.launch  plug_test.launch  probe_action.launch  slider_test.launch  task_board_detector.launch  task_sm.launch  visual_servoing.launch  wind_cable_action.launch
models/door_knob/: door_knob_nano_ver1.pt
models/probe_holder_horizontal/: probe_holder_horizontal_nano_ver1.pt  probe_holder_horizontal_nano_ver2.pt
scripts/: .pick_and_place.py.swp  button_press_test.py  byod_test.py  gui_kinova.py  pick_and_place.py  plug_test.py  points_of_interest_publisher.py  pose_mockup_gui.py  probe_test.py  slider_test.py  task_sm.py  task_sm.py.multi_pose  tool_to_board_link_pub.py  visual_servoing_kinova.py  wind_cable_test.py
src/: task_board_detector.cpp
src/robothon2023/: .full_arm_movement.py.swp  abstract_action.py  button_press_action.py  byod_action.py  full_arm_movement.py  plug_remove_slid_action.py  probe_action.py  (+4 more)
(+4 files in other folders)
